--- a/figures/tabparameters.tex
+++ b/figures/tabparameters.tex
@@ -22,6 +22,7 @@
 		\tt CVMFS\_KCACHE\_TIMEOUT			& Timeout for path names and file attributes in the kernel file system buffers.\\
 		\tt CVMFS\_KEYS\_DIR				& Directory containing *.pub files used as repository signing keys.  If set, this parameter has precedence over \texttt{CVMFS\_PUBLIC\_KEY}.\\
 		\tt CVMFS\_LOW\_SPEED\_LIMIT		& Minimum transfer rate a server or proxy must provide.\\
+		\tt CVMFS\_MAX\_IPADDR\_PER\_PROXY & Limit the number of IP addresses a proxy names resolves into.  From all registered addresses, up to the limit are randomly selected.\\
 		\tt CVMFS\_MAX\_RETRIES			& Maximum number of retries for a given proxy/host combination.\\
 		\tt CVMFS\_MAX\_TTL				& Maximum file catalog TTL in minutes.  Can overwrite the TTL stored in the catalog.\\
 		\tt CVMFS\_MEMCACHE\_SIZE			& Size of the \cvmfs\ meta-data memory cache in Megabyte.\\
