--- a/cvmfstech.tex
+++ b/cvmfstech.tex
@@ -26,6 +26,7 @@
 \providecommand{\dpkg}{{\scshape dpkg}}
 \providecommand{\yum}{{\scshape yum}}
 \providecommand{\cmake}{{\scshape cmake}}
+\providecommand{\parrot}{{\scshape parrot}}
 \providecommand{\cernvmfs}{{\scshape CernVM File System}}
 \providecommand{\zep}{{\scshape zeppelin}}
 \providecommand{\scvmfs}{{{\itshape\scshape s}\scshape cvmfs}}
@@ -41,7 +42,7 @@
 
 \begin{document}
 \selectlanguage{english}
-\renewcommand\today{July 2015}
+\renewcommand\today{August 2015}
 \newcommand\cvmfsversion{2.2.0}
 
 \pagestyle{empty}
