--- a/figures/tabserverparameters.tex
+++ b/figures/tabserverparameters.tex
@@ -30,6 +30,9 @@
 		\tt CVMFS\_GARBAGE\_COLLECTION		& Enables repository garbage collection \newline (Stratum~0 only | if set to \texttt{true})\\
 		\tt CVMFS\_AUTO\_GC					& Enables the automatic garbage collection on \texttt{publish} and \texttt{snapshot}\\
 		\tt CVMFS\_AUTO\_GC\_TIMESPAN		& Date-threshold for automatic garbage collection \newline (For example: \texttt{3 days ago}, \texttt{1 week ago}, ...)\\
+    \tt CVMFS\_AUTOCATALOGS                 & Enable/disable automatic catalog management using autocatalogs.\\
+    \tt CVMFS\_AUTOCATALOGS\_MAX\_WEIGHT    & Maximum number of entries in an autocatalog to be considered overflowed \newline (see also \texttt{CVMFS\_AUTOCATALOGS})\\
+    \tt CVMFS\_AUTOCATALOGS\_MIN\_WEIGHT    & Minimum number of entries in an autocatalog to be considered underflowed \newline (see also \texttt{CVMFS\_AUTOCATALOGS})\\
 		\bottomrule
 
 		\label{tab:serverparameters}
