--- a/cpt-replica.tex
+++ b/cpt-replica.tex
@@ -61,7 +61,7 @@ We suggest the following key parameters:
 	\item[DNS cache.]
 		A Stratum 1 does a lot of DNS lookups, so we recommend
 		installing a DNS caching mechanism on the machine such
-		as \texttt{dnsmasq} or \texttt{bind9}.  We do not recommend
+		as \texttt{dnsmasq} or \texttt{bind}.  We do not recommend
 		\texttt{nscd} since it does not honor the DNS Time-To-Live
 		protocol.
 \end{description}
